# StaticMarker

./: .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
src/static_marker/: config.py  main.py
src/static_marker/decorator_adders/: _get_self_name.py  _makes_use_of_self.py  add_class_method_decorator.py  add_methods.py  add_static_method_decorator.py
src/static_marker/transform/: _transformer.py
